모델 네임스페이스 추가 autoload / Api : src

--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,11 @@
 {
-    "name": "slim/slim-skeleton",
-    "description": "A Slim Framework skeleton application for rapid development",
-    "keywords": ["microframework", "rest", "router", "psr7"],
-    "homepage": "http://github.com/slimphp/Slim-Skeleton",
+    "name": "psuapi/api-server",
+    "description": "",
     "license": "MIT",
     "authors": [
         {
-            "name": "Josh Lockhart",
-            "email": "info@joshlockhart.com",
-            "homepage": "http://www.joshlockhart.com/"
+            "name": "Bernardo",
+            "email": "u5ink@naver.com"
         }
     ],
     "require": {
@@ -23,6 +20,11 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
+        }
+    },
+    "autoload": {
+        "psr-4": {
+            "Api\\": "src/"
         }
     },
     "config": {
