--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,13 @@
     ],
     "require": {
         "php": ">=5.6",
-        "slim/slim": "^3.1",
+        "akrabat/ip-address-middleware": "^1.0",
+        "firebase/php-jwt": "^5.0",
+        "monolog/monolog": "^1.17",
         "slim/php-view": "^2.0",
-        "monolog/monolog": "^1.17"
+        "slim/slim": "^3.1",
+        "tuupola/slim-jwt-auth": "^3.4",
+        "voku/anti-xss": "^4.1"
     },
     "require-dev": {
         "phpunit/phpunit": ">=5.0"
